Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-1490

Windows-specific header files - fixes & tweaks

VotersWatch issueWatchersLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 0.9
    • 0.9
    • C++ - Library
    • Windows Visual Studio 2010

    • Patch Available

    Description

      This patch fixes some minor issues with the Windows config.h and TargetVersion.h files.

      TargetVersion.h:
      _WIN32_WINNT (and thus WINVER) was being forced to 0x0601, overriding project-specific settings. The generally accepted approach is to let the project set this and only define it if it's not already present.

      config.h:
      struct pollfd must be defined for a true XP compatible build (WINVER 0x501). This could not happen before when WINVER was being forced to 0x0601, causing the struct definition to be pulled in from a Vista+ header.
      Some other tweaks resolve compiler warnings.

      I've tested this by building the Thrift C++ libraries with VS2010, as well as our Windows projects that use Thrift. Please provide feedback if this causes any issues.

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            peace Peace C
            peace Peace C
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 24h
                24h
                Remaining:
                Remaining Estimate - 24h
                24h
                Logged:
                Time Spent - Not Specified
                Not Specified

                Slack

                  Issue deployment