THRIFT-1490 Windows-specific header files - fixes & tweaks Patch: Peace C

git-svn-id: https://svn.apache.org/repos/asf/thrift/trunk@1232397 13f79535-47bb-0310-9956-ffa450edef68